changing loss print in training

--- a/main.ipynb
+++ b/main.ipynb
@@ -147,8 +147,8 @@
     "            optimizer.step()\n",
     "\n",
     "            loss_train += loss.item()\n",
-    "\n",
-    "        print('Epoch {}, Training loss {}'.format(epoch, loss_train / len(train_loader)))\n"
+    "        if epoch == 1 or epoch % 10 == 0:\n",
+    "            print('Epoch {}, Training loss {}'.format(epoch, loss_train / len(train_loader)))\n"
    ]
   },
   {
